# internal/delivery/http/dto/attachment_dto.go
@@ -16,15 +16,18 @@ type BulkAttachmentRequest struct {
 }
 
 type AttachmentResponse struct {
-	ID          string                 `json:"id"`
-	ReferralID  string                 `json:"referral_id"`
-	FileName    string                 `json:"file_name"`
-	FileType    string                 `json:"file_type"`
-	FileSize    int64                  `json:"file_size"`
-	Category    string                 `json:"category"`
-	StoragePath string                 `json:"file_url"`
-	Metadata    map[string]interface{} `json:"metadata,omitempty"`
-	UploadedAt  time.Time              `json:"uploaded_at"`
+	ID                 string                 `json:"id" example:"550e8400-e29b-41d4-a716-446655440000"`
+	ReferralID         string                 `json:"referral_id" example:"550e8400-e29b-41d4-a716-446655440000"`
+	FileName           string                 `json:"file_name" example:"xray_chest.dcm"`
+	FileType           string                 `json:"file_type" example:"application/dicom"`
+	FileSize           int64                  `json:"file_size" example:"4587210"`
+	Category           string                 `json:"category" example:"RADIOLOGY"`
+	StoragePath        string                 `json:"file_url" example:"https://res.cloudinary.com/..."`
+	VerificationStatus string                 `json:"verification_status" example:"VERIFIED"`
+	RejectionReason    string                 `json:"rejection_message,omitempty" example:"Metadata extraction failed"`
+	RejectedAt         *time.Time             `json:"rejected_at,omitempty" example:"2026-04-11T19:55:00Z"`
+	Metadata           map[string]interface{} `json:"metadata,omitempty"`
+	UploadedAt         time.Time              `json:"uploaded_at"`
 	BaseResponse
 }
 
@@ -34,10 +37,11 @@ type AttachmentListResponse struct {
 }
 
 type UploadSignatureResponse struct {
-	Signature string `json:"signature"`
-	Timestamp int64  `json:"timestamp"`
-	APIKey    string `json:"api_key"`
-	CloudName string `json:"cloud_name"`
-	Folder    string `json:"folder"`
 	BaseResponse
+	ReferralID string `json:"referral_id" example:"550e8400-e29b-41d4-a716-446655440000"`
+	Signature  string `json:"signature" example:"a92425642...`
+	Timestamp  int64  `json:"timestamp" example:"1649684700"`
+	APIKey     string `json:"api_key" example:"123456789"`
+	CloudName  string `json:"cloud_name" example:"hospital-system"`
+	Folder     string `json:"folder" example:"temp/550e8400-e29b-41d4-a716-446655440000"`
 }
